Lab3-BankService complete; Lab4-MemoryManagement progress